<resources>
    <string name="app_name">Alarm Łańcuchowy</string>
    <string name="alarm_chain">Łańcuch alarmów</string>
    <string name="alarm_sms">Alarmowy SMS</string>
    <string name="alarm_email">Alarmowy Email</string>
    <string name="alarm_call">Alarmowe połączenie</string>
    <string name="save">Zapisz</string>
    <string name="get">Pobierz</string>
    <string name="phone_hint">Numer telefonu</string>
    <string name="message_hint">Wiadomość</string>
    <string name="add_location_checkbox">Dodaj lokalizację</string>
    <string name="add_photo_checkbox">Dodaj zdjęcie</string>
    <string name="email_hint">E-mail</string>
    <string name="subject_hint">Temat</string>
    <string name="name_hint">Nazwa</string>
    <string name="error_empty">To pole nie może być puste</string>
    <string name="error_invalid">To pole zawiera nieprawidłową wartość</string>
    <string name="error_email">Nieprawidłowy adres email</string>
    <string name="chain_link_saved">Ogniwo łańcucha alarmowego zostało zapisane</string>
    <string name="chain_link_call_existing">Nie można dodać więcej ogniw oznaczających połączenie</string>
    <string name="remove">Usuń</string>
    <string name="edit">Edytuj</string>
    <string name="chain_link_removed">Ogniwo łańcucha zostało usunięte</string>
    <string name="no_chain_links">Brak zdefiniowanych ogniw łańcucha alarmowego</string>
    <string name="start_location">Ustalam lokalizację...</string>
    <string name="location">Lokalizacja</string>
    <string name="location_founded">Zaktualizowałem lokalizację</string>
    <string name="sms_sent">Wiadomość została wysłana</string>
    <string name="start_call">Rozpoczynam połączenie</string>
</resources>
