<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    >
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:paddingTop="@dimen/activity_vertical_margin"
        android:paddingBottom="@dimen/activity_vertical_margin"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin">

        <EditText
            android:id="@+id/input_name"
            android:inputType="text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/name_hint"
            android:backgroundTint="@color/colorPrimary"
            android:textCursorDrawable="@null"
            />

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <EditText
                android:id="@+id/input_email"
                android:inputType="textEmailAddress"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:hint="@string/email_hint"
                android:backgroundTint="@color/colorPrimary"
                android:textCursorDrawable="@null"
                />
            <ImageButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/ic_phone_book"
                android:padding="3dp"
                android:onClick="pickEmail"
                />
        </LinearLayout>

        <EditText
            android:id="@+id/input_subject"
            android:inputType="textEmailSubject"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/subject_hint"
            android:backgroundTint="@color/colorPrimary"
            android:textCursorDrawable="@null"
            />

        <EditText
            android:id="@+id/input_message"
            android:inputType="textMultiLine"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/message_hint"
            android:backgroundTint="@color/colorPrimary"
            android:textCursorDrawable="@null"
            android:minLines="1"
            android:gravity="top|left"
            android:maxLines="5"
            />

        <CheckBox
            android:id="@+id/checkbox_add_location"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/add_location_checkbox"
            android:buttonTint="@color/colorPrimary"
            />

        <CheckBox
            android:id="@+id/checkbox_add_photo"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/add_photo_checkbox"
            android:buttonTint="@color/colorPrimary"
            />

    </LinearLayout>
</ScrollView>
